--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "image-thumbnail": "^1.0.6",
-    "jest": "^25.1.0"
+    "jest": "^25.1.0",
+    "tmp-promise": "^2.0.2"
   },
   "homepage": "https://github.com/segurvita/image-thumbnail-practice#readme",
   "license": "Apache-2.0",
